--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 </head>
 
 <body id="home" class="d-flex flex-column h-100">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light py-3 bg-nav fixed-top">
+    <!-- N  avbar -->
+    <nav class="navbar navbar-expand-lg navbar-light py-3 bg-nav ">
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand d-flex align-items-center" href="">
