--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
             <div class="card h-100 border-0 rounded-4 shadow-sm">
                 <div class="card-body p-4 pb-0">
                     <div class="mb-3">
-                        <img src="assets/img/portfolio/pustakakoding-aplikasi-kasir-penjualan-pulsa.jpg" 
+                        <img src="assets/img/Product/Flad Bed.png" 
                              alt="Aplikasi Kasir Jasa Cuci Mobil dan Motor"
                              class="card-img-top img-fluid rounded-4 portfolio-item" 
                              data-bs-toggle="modal" 
                              data-bs-target="#portfolioModal"
                              data-title="Aplikasi Kasir Jasa Cuci Mobil dan Motor"
                              data-description="Aplikasi ini membantu pencucian mobil dan motor dalam mengelola transaksi dan laporan keuangan."
-                             data-image="assets/img/portfolio/pustakakoding-aplikasi-kasir-penjualan-pulsa.jpg">
+                             data-image="assets/img/Product/Flad Bed.png">
                     </div>
                     <p class="fw-semibold">Aplikasi Kasir Jasa Cuci Mobil dan Motor</p>
                 </div>
