--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
                              data-bs-target="#portfolioModal"
                              data-title="Mobil Box"
                              data-description="Mobil Box."
-                             data-image="assets/img/Product/Box alumunium.jpg"
-                             data-whatsapp="https://wa.me/6282130227515?text=Halo,%20saya%20tertarik%20dengan%20produk%20ini.">
+                             data-image="assets/img/Product/Box alumunium.jpg">
                     </div>
                     <p class="fw-semibold">Mobil Box</p>
                 </div>
@@ -698,7 +697,7 @@
              document.getElementById("portfolioModalLabel").innerText = title;
              document.getElementById("portfolioDescription").innerText = description;
              document.getElementById("portfolioImage").src = image;
-             document.getElementById("contactButton").href = whatsappLink || "#";
+             document.getElementById("contactButton").href = whatsappLink || "https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share";
          });
      });
  });
