--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <!-- Social Media -->
                 <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
                     
-                    <a href="linktr.ee/IndoJayaEquipment" target="_blank" class="btn btn-social-media me-3">
+                    <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share" target="_blank" class="btn btn-social-media me-3">
                         <i class="bi bi-instagram"></i>
                     </a>
-                    <a href="linktr.ee/IndoJayaEquipment" target="_blank" class="btn btn-social-media me-3">
+                    <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share" target="_blank" class="btn btn-social-media me-3">
                         <i class="bi bi-whatsapp"></i>
                     </a>
                     
@@ -622,8 +622,8 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">WhatsApp</h5>
-                                    <p>+62 82130227515 (Pak Arie) <br>
-                                         +62 85710631372 (Pak Irfan) 
+                                    <p><a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 82130227515</a> (Pak Arie) <br>
+                                         <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 85710631372</a> (Pak Irfan) 
                                     </p>
                                 </div>
                             </div>
