--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Website Company Profile">
+    <meta name="description" content="Indo Jaya Equipment menyediakan berbagai solusi alat berat, truk arm roll, dan mesin industri untuk kebutuhan bisnis Anda. Hubungi kami untuk penawaran terbaik.">
     <meta name="author" content="Indo Jaya Equipment">
 
     <!-- Title -->
-    <title>Indo Jaya Equipment</title>
+    <title>Indo Jaya Equipment - Solusi Alat Berat dan Truk Arm Roll</title>
 
     <!-- Favicon icon -->
     <link rel="shortcut icon" href="assets/img/logo-removebg-preview.png" type="image/x-icon">
@@ -36,7 +36,59 @@
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Indo Jaya Equipment - Solusi Alat Berat dan Truk Arm Roll">
+    <meta property="og:description" content="Indo Jaya Equipment menyediakan berbagai solusi alat berat dan truk arm roll untuk kebutuhan bisnis Anda. Hubungi kami untuk penawaran terbaik.">
+    <meta property="og:image" content="assets/img/logo-removebg-preview.png">
+    <meta property="og:url" content="https://www.indojayaequipment.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Indo Jaya Equipment - Solusi Alat Berat dan Truk Arm Roll">
+    <meta name="twitter:description" content="Indo Jaya Equipment menyediakan berbagai solusi alat berat dan truk arm roll untuk kebutuhan bisnis Anda. Hubungi kami untuk penawaran terbaik.">
+    <meta name="twitter:image" content="assets/img/logo-removebg-preview.png">
+    <meta name="twitter:site" content="@IndoJayaEquip">
+
+    <!-- Canonical Link (if there are duplicate pages) -->
+    <link rel="canonical" href="https://www.indojayaequipment.com">
+
+    <!-- Structured Data (JSON-LD for better SEO ranking) -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Indo Jaya Equipment",
+          "url": "https://www.indojayaequipment.com",
+          "logo": "https://www.indojayaequipment.com/assets/img/logo-removebg-preview.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+628123368901", 
+            "contactType": "Marketing",
+            "areaServed": "ID",
+            "availableLanguage": "Indonesian"
+          },
+          "sameAs": [
+            "https://www.instagram.com/IndoJayaEquipment"
+          ],
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Jl. Benteng Betawi No. 35",
+            "addressLocality": "Tanggerang",
+            "addressRegion": "Banten",
+            "postalCode": "15141",
+            "addressCountry": "ID"
+          },
+          "description": "Indo Jaya Equipment menyediakan berbagai solusi alat berat dan truk arm roll untuk kebutuhan industri. Kami menyediakan alat-alat berkualitas dan pelayanan terbaik di bidang peralatan industri.",
+          "sameAs": [
+          "https://www.instagram.com/IndoJayaEquipment"
+          ]
+        }
+        </script>
+        
 </head>
+
 
 
 
@@ -622,8 +674,8 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">WhatsApp</h5>
-                                    <p><a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 82130227515</a> (Pak Arie) <br>
-                                         <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 85710631372</a> (Pak Irfan) 
+                                    <p><a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 82130227515</a> ( Arie) <br>
+                                         <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 85710631372</a> ( Irfan) 
                                     </p>
                                 </div>
                             </div>
