--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                             <p>-After sales 2x24 jam <br>
                                -Garansi Hydrolik <br>
                                -Garansi Pompa <br>
-                               -Harga yang kompetitif
+                               -Harga yang kompetitif <div class="p1"><p>ee</p></div>
+                               
                             </p>
                         </div>
                     </div>
@@ -322,16 +323,16 @@
             <div class="card h-100 border-0 rounded-4 shadow-sm">
                 <div class="card-body p-4 pb-0">
                     <div class="mb-3">
-                        <img src="assets/img/Product/Flad Bed.png" 
-                             alt="Flad Bed"
+                        <img src="assets/img/Product/flat deck.jpg" 
+                             alt="Flad Deck"
                              class="card-img-top img-fluid rounded-4 portfolio-item-img" 
                              data-bs-toggle="modal" 
                              data-bs-target="#portfolioModal"
-                             data-title="Flad Bed"
-                             data-description="Flad Bed"
-                             data-image="assets/img/Product/Flad Bed.png">
+                             data-title="Flad Deck"
+                             data-description="Flad Deck"
+                             data-image="assets/img/Product/flat deck.jpg">
                     </div>
-                    <p class="fw-semibold">Flad deck(belum ada)</p>
+                    <p class="fw-semibold">Flad deck</p>
                 </div>
             </div>
         </div>
@@ -524,14 +525,14 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <img src="assets/img/Product/Dump truck.jpg" 
+                                <img src="assets/img/Product/Dump truck (1).jpg" 
                                      alt="Dump Truck"
                                      class="card-img-top img-fluid rounded-4 portfolio-item-img" 
                                      data-bs-toggle="modal" 
                                      data-bs-target="#portfolioModal"
                                      data-title="Dump Truck"
                                      data-description="Dump Truck."
-                                     data-image="assets/img/Product/Dump truck.jpg">
+                                     data-image="assets/img/Product/Dump truck (1).jpg">
                             </div>
                             <p class="fw-semibold">Dump Truck </p>
                         </div>
@@ -597,14 +598,14 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <img src="assets/img/Product/Truck Arm Roll Stainless (3).png" 
+                                <img src="assets/img/Product/low bed.jpg" 
                                      alt="Low Bed"
                                      class="card-img-top img-fluid rounded-4 portfolio-item-img" 
                                      data-bs-toggle="modal" 
                                      data-bs-target="#portfolioModal"
                                      data-title="Low Bed"
                                      data-description=" Low Bed."
-                                     data-image="assets/img/Product/Truck Arm Roll Stainless (3).png">
+                                     data-image="assets/img/Product/low bed.jpg>
                             </div>
                             <p class="fw-semibold">Low Bed (soon)</p>
                         </div>
@@ -792,7 +793,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">WhatsApp</h5>
-                                    <p><a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 82130227515</a> ( Arie) <br>
+                                    <p><a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 82130227515</a> ( Ari) <br>
                                          <a href="https://linktr.ee/IndoJayaEquipment?utm_source=linktree_admin_share">+62 85710631372</a> ( Irfan) 
                                     </p>
                                 </div>
