--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                      data-bs-target="#portfolioModal"
                                      data-title="Dump Truck"
                                      data-description="Dump Truck."
-                                     data-image="assets/img/Product/Dump truck (1).jpg">
+                                     data-image="assets/img/Product/Dump truck.jpg">
                             </div>
                             <p class="fw-semibold">Dump Truck </p>
                         </div>
@@ -580,16 +580,16 @@
                     <div class="card h-100 border-0 rounded-4 shadow-sm">
                         <div class="card-body p-4 pb-0">
                             <div class="mb-3">
-                                <img src="assets/img/Product/Truck Arm Roll Stainless (3).png" 
+                                <img src="assets/img/Product/high bed.jpg" 
                                      alt="hight Bed"
                                      class="card-img-top img-fluid rounded-4 portfolio-item-img" 
                                      data-bs-toggle="modal" 
                                      data-bs-target="#portfolioModal"
                                      data-title="Hight Bed"
                                      data-description=" Hight Bed."
-                                     data-image="assets/img/Product/Truck Arm Roll Stainless (3).png">
+                                     data-image="assets/img/Product/high bed.jpg">
                             </div>
-                            <p class="fw-semibold">Hight Bed (soon)</p>
+                            <p class="fw-semibold">Hight Bed</p>
                         </div>
                     </div>
                 </div>
@@ -605,9 +605,9 @@
                                      data-bs-target="#portfolioModal"
                                      data-title="Low Bed"
                                      data-description=" Low Bed."
-                                     data-image="assets/img/Product/low bed.jpg>
+                                     data-image="assets/img/Product/low bed.jpg">
                             </div>
-                            <p class="fw-semibold">Low Bed (soon)</p>
+                            <p class="fw-semibold">Low Bed </p>
                         </div>
                     </div>
                 </div>
